--- a/Resume.html
+++ b/Resume.html
@@ -7,11 +7,12 @@
     <!-- Css file -->
     <link rel="stylesheet" href="assets/css/reset-css.css">
     <link rel="stylesheet" href="assets/css/style-dark-version.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-------------->
 
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/png" href="assets/imgs/re-favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="assets/imgs-dark/logo-new-2.png"/>
     <!------------->
 
 
@@ -26,7 +27,7 @@
     <div id="all">
       <header>
         <div id="logo">
-          <a href="index.html" target="self"><img src="assets/imgs-dark/logo-new.png" alt=""></a>
+          <a href="index.html" target="self"><img src="assets/imgs-dark/logo-new-2.png" alt=""></a>
         </div>
         <!-- Nav for mobile -->
         <input type="checkbox" name="" id="nav-btn" hidden>
@@ -46,7 +47,7 @@
           <!-- bw - icon -->
           <label for="nav-btn" class="nav-list">
             <ul>
-                <a href="./index.html" target="self"><li>
+                <a href="./index.html" target="_self"><li>
                   <img src="assets/imgs-dark/icon/home-light.svg" alt="" class="nav-icon">
                   <img src="assets/imgs-dark/icon/home-dark.svg" alt="" class="nav-icon mobile-icon-hover">
                 Hello</li></a>
