--- a/Contact.html
+++ b/Contact.html
@@ -21,7 +21,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <!------------------->
 
-    <title>Huu Thang Nguyen</title>
+    <title>Contact & Information</title>
 </head>
 <body>
     <div id="all">
@@ -86,23 +86,49 @@
             <li><a href="./Contact.html" id="" class="button five" target="_self">Contact</a></li>
           </ul>
         </nav>
-        <a href="#" target="_blank">
+        <a href="Resume.html" target="_blank">
           <div id="resume-btn"><p>REsume</p></div>
         </a>
       </header>
       <div id="container">
         <div style="width:100%; height:50px"></div>
         <section class="text">
-          <div>
-            <h1>Contact</h1>
+          <div class="contact">
+            <h1>Contact information</h1>
             <input hidden type="checkbox" id="contact-card-btn">
             <!-- Name -->
               <div class="row add-outline-1 add-border  color-8 card-effect-1">
                 <label for="contact-card-btn">
                   <div class="col-30p-desktop col-100p-mobile">
-                    <img src="assets/imgs-dark/icon-contact-color/identification-card-with-picture-light.svg" alt="">
+                    <img src="assets/imgs-dark/icon-color/mail.svg" alt="">
                   </div>
-                  <div class="col-70p-desktop col-100p-mobile"><h3>KUBOKID</h3></div>
+                  <div class="col-70p-desktop col-100p-mobile">
+                    <h4>NGUYỄN HỮU THẮNG</h4>
+                    <h4>Email - thangnh0511@gmail.com</h4>
+                    <h4><a href="https://www.facebook.com/thangg.darius/" target="_blank">Facebook</a></h4>
+                    <h4><a href="https://www.linkedin.com/in/thang-nh/" target="_blank">Linkedin</a></h4>
+                  </div>
+                </label>
+              </div>
+            
+          </div>
+        </section>
+        <section class="text">
+          <div class="contact">
+            <h1>Information</h1>
+            <input hidden type="checkbox" id="contact-card-btn-2">
+            <!-- Name -->
+              <div class="row add-outline-1 add-border  color-8 card-effect-1">
+                <label for="contact-card-btn-2">
+                  <div class="col-30p-desktop col-100p-mobile">
+                    <img src="assets/imgs-dark/icon-color/information-1.svg" alt="">
+                  </div>
+                  <div class="col-70p-desktop col-100p-mobile" style="text-align:left; letter-spacing: .5px;"><h4>
+                    This page was created by me order to sharing my information. It will be update frequently my information, project, working, network and stuff. Everything that I feel such interesting will be update on this website. Not only content also theme and stuff.
+                  </h4>
+                  <p>Writing date: 20-06-2021</p>
+                </div>
+
                 </label>
               </div>
             
