--- a/Resume.html
+++ b/Resume.html
@@ -65,17 +65,6 @@
                   <img src="assets/imgs-dark/icon/contact-dark.svg" alt="" class="nav-icon mobile-icon-hover">Contact</li></a>
             </ul>
           </label>
-          <!-- Color - icon -->
-          <!-- <ul>
-            <li><img src="assets/imgs/icon-color/hi.svg" alt="" class="nav-icon">
-              <a href="#"> Hello</a></li>
-            <li><img src="assets/imgs/icon-color/presentation.svg" alt="" class="nav-icon"><a href="#">Projects</li>
-            <li><img src="assets/imgs/icon-color/badge-color.svg" alt="" class="nav-icon"><a href="#"> Achievement</li>
-            <li><img src="assets/imgs/icon-color/message.svg" alt="" class="nav-icon"><a href="#">Contact</li>
-            <li><img src="assets/imgs/icon-color/profile-color.svg" alt="" class="nav-icon"><a href="">
-              Resume
-            </a></li>
-          </ul> -->
         </div>
         <!-- Close - Nav for mobile -->
         <nav>
@@ -91,7 +80,15 @@
         </a>
       </header>
       <div id="container">
+        <div style="width:100%; height:50px"></div>
+        <a href="assets/pdf/thangnh_res.pdf" download="NGUYEN-HUU-THANG_resume">
+          <div class="resume-page-btn">
+            <h3>REsume</h3>
+          </div>
+        </a>
+       <section>
        
+       </section>
       </div>
 
       <footer><div class="footer-area">
