--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <li><a href="./Contact.html" id="" class="button five" target="_self">Contact</a></li>
           </ul>
         </nav>
-        <a href="#" target="_blank">
+        <a href="Resume.html" target="_blank">
           <div id="resume-btn"><p>REsume</p></div>
         </a>
         
@@ -103,12 +103,44 @@
           <div class="right">
             <h1 id="hello-h1-1">Hello There!</h1>
             <h1 id="hello-h1-2">I'm Nguyen Huu Thang</h1>
-            <p class="text-block">A <b>Junior Business Analyst</b>, who is competent at solving issue and building solution. My background in Economics, Technique and Creative thinking.</p>
-            <p class="text-block mobile">Working nearly 2 years in ERP system field, with business analyst position. I was tend to really interest for communicate with senior people in organizations and identify their issues, then building and making the potential solution which strongly effort for their running business process much more flexible and effective. </p>
+            <div class="text-block">
+              <p>A <b>Junior Business Analyst</b>, who is competent at solving issue and building solution. My background in Economics, Technique and Creative thinking.</p> <br>
+              <!-- <p class="tablet">
+                Working nearly 2 years in ERP system field, with business analyst position. I continuously tend to really interest for communicate with senior people in organizations and identify their issues, then building and making the potential solution which strongly effort for their running business process much more flexible and effective.
+              </p> -->
           </div>
-          <div class="des tablet">
-            <p>Working nearly 2 years in ERP system field, with business analyst position. I was tend to really interest for communicate with senior people in organizations and identify their issues, then building and making the potential solution which strongly effort for their running business process much more flexible and effective.</p>
+            <p class="text-block mobile">Working nearly 2 years in ERP system field, with business analyst position. I continuously tend to really interest for communicate with senior people in organizations and identify their issues, then building and making the potential solution which strongly effort for their running business process much more flexible and effective. </p>
+            <!-- <p class="test-block ">Working nearly 2 years in ERP system field, with business analyst position. I continuously tend to really interest for communicate with senior people in organizations and identify their issues, then building and making the potential solution which strongly effort for their running business process much more flexible and effective.</p> -->
+          </div>
+            
         </div>
+        </section>
+        <section class="text">
+          <h1>Overview</h1>
+        </section>
+        <section class="media-block">
+          <div class="grid grid-s">
+            <div class="grid-content">
+              <h1>SIMEXCO DAKLAK</h1>
+              <p>Xây dựng quy trình xử lý mua bán hàng</p>
+            </div>
+            <img src="assets/img-profile/DSC05963.jpg" alt="">
+          </div>
+          <div class="grid grid-s">
+            <img src="assets/img-profile/DSC05963.jpg" alt="">
+          </div>
+          <div class="grid grid-s">
+            <img src="assets/img-profile/DSC05963.jpg" alt="">
+          </div>
+          <div class="grid grid-s">
+            <img src="assets/img-profile/DSC05963.jpg" alt="">
+          </div>
+          <div class="grid grid-s">
+            <img src="assets/img-profile/DSC05963.jpg" alt="">
+          </div>
+          <div class="grid grid-s">
+            <img src="assets/img-profile/DSC05963.jpg" alt="">
+          </div>
         </section>
         <!-- <section>
           <h1>What's upppppppp</h1>
@@ -133,7 +165,7 @@
       </div> -->
 
       <footer><div class="footer-area">
-        <p>Made with <i class="em em-hearts" aria-role="presentation" aria-label="BLACK HEART SUIT"></i>  by Huu Thang</p>
+        <p>Made with <i class="em em-hearts" aria-role="presentation" aria-label="BLACK HEART SUIT"></i>by Huu Thang</p>
     </div></footer>
 
     </div>
