--- a/Project.html
+++ b/Project.html
@@ -65,18 +65,7 @@
                   <img src="assets/imgs-dark/icon/contact-dark.svg" alt="" class="nav-icon mobile-icon-hover">Contact</li></a>
             </ul>
           </label>
-          <!-- Color - icon -->
-          <!-- <ul>
-            <li><img src="assets/imgs/icon-color/hi.svg" alt="" class="nav-icon">
-              <a href="#"> Hello</a></li>
-            <li><img src="assets/imgs/icon-color/presentation.svg" alt="" class="nav-icon"><a href="#">Projects</li>
-            <li><img src="assets/imgs/icon-color/badge-color.svg" alt="" class="nav-icon"><a href="#"> Achievement</li>
-            <li><img src="assets/imgs/icon-color/message.svg" alt="" class="nav-icon"><a href="#">Contact</li>
-            <li><img src="assets/imgs/icon-color/profile-color.svg" alt="" class="nav-icon"><a href="">
-              Resume
-            </a></li>
-          </ul> -->
-        </div>
+          </div>
         <!-- Close - Nav for mobile -->
         <nav>
           <ul>
@@ -86,7 +75,7 @@
             <li><a href="./Contact.html" id="" class="button five">Contact</a></li>
           </ul>
         </nav>
-        <a href="Resume.html" target="_blank">
+        <a href=",/Resume.html" target="_blank">
           <div id="resume-btn"><p>REsume</p></div>
         </a>
       </header>
