--- a/Resume.html
+++ b/Resume.html
@@ -57,7 +57,7 @@
                 <a href="./Achievement.html" target="self">
                 <li><img src="assets/imgs-dark/icon/achievement-light.svg" alt="" class="nav-icon">
                   <img src="assets/imgs-dark/icon/achievement-dark.svg" alt="" class="nav-icon mobile-icon-hover"> Achievement</li></a>
-                <a href="/Resume.html" target="self" for="nav-btn" class="nav-list">
+                <a href="./Resume.html" target="self" for="nav-btn" class="nav-list">
                 <li><img src="assets/imgs-dark/icon/resume-light.svg" alt="" class="nav-icon">
                 <img src="assets/imgs-dark/icon/resume-dark.svg" alt="" class="nav-icon mobile-icon-hover">Resume</li></a>
                 <a href="./Contact.html" target="self">
@@ -75,7 +75,7 @@
             <li><a href="./Contact.html" id="" class="button five" target="_self">Contact</a></li>
           </ul>
         </nav>
-        <a href="#" target="_blank">
+        <a href="./Resume.html" target="_blank">
           <div id="resume-btn"><p>REsume</p></div>
         </a>
       </header>
