--- a/index.html
+++ b/index.html
@@ -64,17 +64,6 @@
                   <img src="assets/imgs-dark/icon/contact-dark.svg" alt="" class="nav-icon mobile-icon-hover">Contact</li></a>
             </ul>
           </label>
-          <!-- Color - icon -->
-          <!-- <ul>
-            <li><img src="assets/imgs/icon-color/hi.svg" alt="" class="nav-icon">
-              <a href="#"> Hello</a></li>
-            <li><img src="assets/imgs/icon-color/presentation.svg" alt="" class="nav-icon"><a href="#">Projects</li>
-            <li><img src="assets/imgs/icon-color/badge-color.svg" alt="" class="nav-icon"><a href="#"> Achievement</li>
-            <li><img src="assets/imgs/icon-color/message.svg" alt="" class="nav-icon"><a href="#">Contact</li>
-            <li><img src="assets/imgs/icon-color/profile-color.svg" alt="" class="nav-icon"><a href="">
-              Resume
-            </a></li>
-          </ul> -->
         </div>
         <!-- Close - Nav for mobile -->
         <nav>
@@ -85,7 +74,7 @@
             <li><a href="./Contact.html" id="" class="button five" target="_self">Contact</a></li>
           </ul>
         </nav>
-        <a href="Resume.html" target="_blank">
+        <a href="./Resume.html" target="_blank">
           <div id="resume-btn"><p>REsume</p></div>
         </a>
         
@@ -117,29 +106,32 @@
         </section>
         <section class="text">
           <h1>Overview</h1>
+          <h2><q>Keep my memories in the photograph</q></h2>
         </section>
         <section class="media-block">
           <div class="grid grid-s">
-            <div class="grid-content">
-              <h1>SIMEXCO DAKLAK</h1>
-              <p>Xây dựng quy trình xử lý mua bán hàng</p>
-            </div>
-            <img src="assets/img-profile/DSC05963.jpg" alt="">
+            <img src="assets/imgs-dark/profile/015.jpg" alt="">
           </div>
           <div class="grid grid-s">
-            <img src="assets/img-profile/DSC05963.jpg" alt="">
+            <img src="assets/imgs-dark/profile/005.jpg" alt="">
           </div>
           <div class="grid grid-s">
-            <img src="assets/img-profile/DSC05963.jpg" alt="">
+            <img src="assets/imgs-dark/profile/011.jpg" alt="">
           </div>
           <div class="grid grid-s">
-            <img src="assets/img-profile/DSC05963.jpg" alt="">
+            <img src="assets/imgs-dark/profile/008.jpg" alt="">
           </div>
           <div class="grid grid-s">
-            <img src="assets/img-profile/DSC05963.jpg" alt="">
+            <img src="assets/imgs-dark/profile/007.jpg" alt="">
           </div>
           <div class="grid grid-s">
-            <img src="assets/img-profile/DSC05963.jpg" alt="">
+            <img src="assets/imgs-dark/profile/010.jpg" alt="">
+          </div>
+        </section>
+        <section class="text" style="margin-top:50%;">
+          <h1>Just Relax</h1>
+          <div class="media-file media-file-s">
+            <iframe src="https://www.youtube.com/embed/SX_ViT4Ra7k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </section>
         <!-- <section>
