--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="box-1"></div>
             <img src="assets/imgs-dark/avata-back.png" alt="" id="img-back-ndisp">
             <img src="https://by.com.vn/Ffa36s" alt="" id="img-back">
-            <img src="https://by.com.vn/WPmDHZ" alt="" id="img-front">
+            <img src="https://i.ibb.co/XWyGG3x/avata-front.png" alt="" id="img-front">
           </div>
           <div class="right">
             <h1 id="hello-h1-1">Hello There!</h1>
