--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <a href="./Resume.html" target="_blank">
           <div id="resume-btn"><p>REsume</p></div>
         </a>
-        
+        <!-- ----------------HEADER---------------------- -->
       </header>
       <div id="container">
         <div style="width:100%; height:50px"></div>
