--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             <div class="box-2"></div>
             <div class="box-1"></div>
             <img src="assets/imgs-dark/avata-back.png" alt="" id="img-back-ndisp">
-            <img src="assets/imgs-dark/avata-back.png" alt="" id="img-back">
-            <img src="assets/imgs-dark/avata-front.png" alt="" id="img-front">
+            <img src="https://lh3.googleusercontent.com/SvnDN-ole34n8pQvhjKz5dV7PIyPoKX7KbXQTpAz5TwCzpBCP4Y_YwjpGDVpRr9xWalJpp4co6AgfVCy-ZWIwP3Y3Gt1np0Y4ITeytkuoXRFU1Pp4qs5PTJcNYJ3xif4BBxlquCKlxpXVPQCdt_qbw8add6AdD0WrrJG0tGHxkJt5rDlZR7YLru7GoNtc8OVQNJokUFA3UyP_4MkOxJnky6ThoOJZ9p7T53znpAppbTu7y_Kmf93UswdShyDVxC_nxPoS_ZN-hKvFxzu1GVoRvIAqZnByhyuPNPClctwGiRNhQPOpKynRiNi8Sc6UBRHNP6ky9MnhPp4HrRAN_WJUW_eabbDa9toc892ASufw6ADHWnSZ8WW41Lr2be-woyfyBI-9jEFcapo1ZcD30CXzRIuctsi68b9oeYNxBoDhKhI1b0d0skPCHITrL-b0e9nm6UHS_h-TjalJ8gWmz05dXCrqU7vBfRTJ72fZGFQP_DrD5PZXigokH4Ti4iSRa1Enb-dzArxhz1pLh8LS6ZXPJCE3XV-xyjBYfkWWH6_WeZtAK23kuHk0KgCUl7hwycnrZQRhdsolyKPUz9VO17CQ3EY5ezjjrWomRydbT_iQwRhNtm6o7z1_JNbkQrIpIHNRrYBSZj1aaAMq5nEBg2EOXdZDuXFU4V0EHbayQ2TvN4voEcIy1VhUYcDvusJtMFZPKdips61QWoTvqQZHYcg8Cw=w728-h779-no?authuser=0" alt="" id="img-back">
+            <img src="https://lh3.googleusercontent.com/gEnPlCvgrTYXdZk34T5agMTsFzHMYgBc-_Iwdofdv0pDPm_63atco0jwPhYqeccsAhyaGJV74Cd8ANUPVbO5v8EZ4eFNI_OQIUedud8269X3-cdRESxxFQSprkP8s9Ny3DOXVX8evTU642TAaQY-QGABGxVsaM4fIDDcXQkBwNC2yOrjAAF0Vwa0cGEHm1YdSIN_Ab-36bKs-SHSFUQrpuT4yQgbRviSEenm7kO-1wBj_Av8YWU7lG5lLWscuLvHRYJw56KxTxdmrKuLFHhQF5B3m6LfPSz1iHgx0Hc4fJY_sePV0x4EN81bcO2v55mLWSRAzmlADIaloTOPpjZqg4fiHhqxfALOjUh37bgOx6HC20TH4Ty3DBMkeH7VpUWwTl5pUuZTjYCbVTvc-9FB84oQh8tc6xO_TD1ATDvkCnG4xml8qEgLDLdEEue4a2Xgch77sujWY0Wky9uqWyrelw6Qsmm3s7d30RWA-hdLxHZuQJIBkg-toVMRVXz0Ud70kHG-KppXZs0EcLUBjClLovgpWSl-0B9wUmWgK97HhALi0H8DE47EjYeGOZYLMv-cC5sUeujZCkugPIP_b4B13efrYpCjczgSlG3WHE49cdd1v0gCsZF39DlmTcNnQjE19Gcz3QwDQze6hcwY_pVxtMB5vkRim2RJNTVmD0YAVJwUJ2Rqpiot_9tDwpI9nF6sFBedRmuI8XN8bBdjdufH3HM=w275-h295-no?authuser=0" alt="" id="img-front">
           </div>
           <div class="right">
             <h1 id="hello-h1-1">Hello There!</h1>
