--- a/Achievement.html
+++ b/Achievement.html
@@ -79,6 +79,8 @@
           <div id="resume-btn"><p>REsume</p></div>
         </a>
       </header>
+
+      <!-------- HEADER -------->
       <div id="container">
      
       </div>
