--- a/Project.html
+++ b/Project.html
@@ -47,20 +47,20 @@
           <!-- bw - icon -->
           <label for="nav-btn" class="nav-list">
             <ul>
-                <a href="./index.html" target="_self"><li>
+                <a href="index.html" target="_self"><li>
                   <img src="assets/imgs-dark/icon/home-light.svg" alt="" class="nav-icon">
                   <img src="assets/imgs-dark/icon/home-dark.svg" alt="" class="nav-icon mobile-icon-hover">
                 Hello</li></a>
-                <a href="./Project.html" target="self">
+                <a href="Project.html" target="self">
                 <li><img src="assets/imgs-dark/icon/project-light.svg" alt="" class="nav-icon">
                 <img src="assets/imgs-dark/icon/project-dark.svg" alt="" class="nav-icon mobile-icon-hover">Projects</li></a>
-                <a href="./Achievement.html" target="self">
+                <a href="Achievement.html" target="self">
                 <li><img src="assets/imgs-dark/icon/achievement-light.svg" alt="" class="nav-icon">
                   <img src="assets/imgs-dark/icon/achievement-dark.svg" alt="" class="nav-icon mobile-icon-hover"> Achievement</li></a>
-                <a href="/Resume.html" target="self" for="nav-btn" class="nav-list">
+                <a href="Resume.html" target="self" for="nav-btn" class="nav-list">
                 <li><img src="assets/imgs-dark/icon/resume-light.svg" alt="" class="nav-icon">
                 <img src="assets/imgs-dark/icon/resume-dark.svg" alt="" class="nav-icon mobile-icon-hover">Resume</li></a>
-                <a href="./Contact.html" target="self">
+                <a href="Contact.html" target="self">
                 <li><img src="assets/imgs-dark/icon/contact-light.svg" alt="" class="nav-icon">
                   <img src="assets/imgs-dark/icon/contact-dark.svg" alt="" class="nav-icon mobile-icon-hover">Contact</li></a>
             </ul>
@@ -69,13 +69,13 @@
         <!-- Close - Nav for mobile -->
         <nav>
           <ul>
-            <li><a href="./index.html" id="" class="button five">Home</a></li>
-            <li><a href="./Project.html" id="" class="button five">Projects</a></li>
-            <li><a href="./Achievement.html" id="" class="button five">Achievements</a></li>
-            <li><a href="./Contact.html" id="" class="button five">Contact</a></li>
+            <li><a href="index.html" id="" class="button five">Home</a></li>
+            <li><a href="Project.html" id="" class="button five">Projects</a></li>
+            <li><a href="Achievement.html" id="" class="button five">Achievements</a></li>
+            <li><a href="Contact.html" id="" class="button five">Contact</a></li>
           </ul>
         </nav>
-        <a href=",/Resume.html" target="_blank">
+        <a href="Resume.html" target="_blank">
           <div id="resume-btn"><p>REsume</p></div>
         </a>
       </header>
@@ -169,14 +169,13 @@
             </div>
           </div>
           <!-- DANA TRUNG HIEU -->
-          <div class="row add-outline-1 add-border  color-8 card-effect-1">
+          <!-- <div class="row add-outline-1 add-border  color-8 card-effect-1">
             <div>
               <div class="col-30p-desktop col-100p-mobile tablet">
                 <img src="assets/imgs-dark/icon-color/truck.svg" alt="" class="project-icon">
               </div>
               <div class="col-70p-desktop col-100p-mobile project-describe">
-                <h2>VIET HUONG CERAMIC CONSTRUCTION COMPANY LIMITED - Accounting Software
-                </h2>
+                <h2>DANA TRUNG HIEU</h2>
                 <div class="heading-line"></div>
                 <h3><span><img src="assets/imgs-dark/icon-color/maps-and-flags.svg" alt=""></span> Da Nang City</h3>
                 <ul>
@@ -185,7 +184,7 @@
                 </ul>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- NEXT -->
           <div class="row add-outline-1 add-border  color-8 card-effect-1">
             <div>
