--- a/Resume.html
+++ b/Resume.html
@@ -51,16 +51,16 @@
                   <img src="assets/imgs-dark/icon/home-light.svg" alt="" class="nav-icon">
                   <img src="assets/imgs-dark/icon/home-dark.svg" alt="" class="nav-icon mobile-icon-hover">
                 Hello</li></a>
-                <a href="./Project.html" target="self">
+                <a href="./project.html" target="self">
                 <li><img src="assets/imgs-dark/icon/project-light.svg" alt="" class="nav-icon">
                 <img src="assets/imgs-dark/icon/project-dark.svg" alt="" class="nav-icon mobile-icon-hover">Projects</li></a>
-                <a href="./Achievement.html" target="self">
+                <a href="./achievement.html" target="self">
                 <li><img src="assets/imgs-dark/icon/achievement-light.svg" alt="" class="nav-icon">
                   <img src="assets/imgs-dark/icon/achievement-dark.svg" alt="" class="nav-icon mobile-icon-hover"> Achievement</li></a>
-                <a href="./Resume.html" target="self" for="nav-btn" class="nav-list">
+                <a href="./resume.html" target="self" for="nav-btn" class="nav-list">
                 <li><img src="assets/imgs-dark/icon/resume-light.svg" alt="" class="nav-icon">
                 <img src="assets/imgs-dark/icon/resume-dark.svg" alt="" class="nav-icon mobile-icon-hover">Resume</li></a>
-                <a href="./Contact.html" target="self">
+                <a href="./contact.html" target="self">
                 <li><img src="assets/imgs-dark/icon/contact-light.svg" alt="" class="nav-icon">
                   <img src="assets/imgs-dark/icon/contact-dark.svg" alt="" class="nav-icon mobile-icon-hover">Contact</li></a>
             </ul>
@@ -70,12 +70,12 @@
         <nav>
           <ul>
             <li><a href="./index.html" id="" class="button five" target="_self">Home</a></li>
-            <li><a href="./Project.html" id="" class="button five" target="_self">Projects</a></li>
-            <li><a href="./Achievement.html" id="" class="button five" target="_self">Achievements</a></li>
-            <li><a href="./Contact.html" id="" class="button five" target="_self">Contact</a></li>
+            <li><a href="./project.html" id="" class="button five" target="_self">Projects</a></li>
+            <li><a href="./achievement.html" id="" class="button five" target="_self">Achievements</a></li>
+            <li><a href="./contact.html" id="" class="button five" target="_self">Contact</a></li>
           </ul>
         </nav>
-        <a href="./Resume.html" target="_blank">
+        <a href="./resume.html" target="_blank">
           <div id="resume-btn"><p>REsume</p></div>
         </a>
       </header>
