--- a/Resume.html
+++ b/Resume.html
@@ -86,8 +86,12 @@
             <h3>REsume</h3>
           </div>
         </a>
-       <section>
-       
+       <section class="text">
+        <div>
+          <div></div>
+          <div></div>
+        </div>
+        <div class="Heading-line"></div>
        </section>
       </div>
 
