--- a/Achievement.html
+++ b/Achievement.html
@@ -82,7 +82,18 @@
 
       <!-------- HEADER -------->
       <div id="container">
-     
+        <div style="width:100%; height:50px"></div>
+        <div class="content-area">
+
+          <section class="text">
+            <h1>Google UX design</h1>
+            <h3>Coursera</h3>
+          </section>
+          <section class="text">
+            <h1>Frontend Development course</h1>
+            <h3>CodeGym</h3>
+          </section>
+        </div>
       </div>
 
       <footer><div class="footer-area">
