--- a/Project.html
+++ b/Project.html
@@ -83,160 +83,146 @@
 
       <div id="container" class="project">
         <div style="width:100%; height:50px"></div>
-        <section class="text">
-          <h1>Projects</h1>
-          <div class="heading-line"></div>
-          <h3 class="project-text">Projects not only got me work experiences, but also life experiences</h3>
-        </section>
-        <!-- DETAIL  -->
-        <!-- <section class="text">
-          <h1>Experiences</h1>
-          <div class="heading-line"></div>
-          <h3>My experiences which I reached thorough work on accounting software and ERP during nearly 2 years.</h3>
-        </section> -->
-
-        <!-- DETAIL EXPERIENCE  -->
-        <section class="text">
-          <!-------- Dong Lam ------->
-          <div class="row add-outline-1 add-border  color-8 card-effect-1">
-            <div>
-              <div class="col-30p-desktop col-100p-mobile tablet">
-                <img src="assets/icon/commerce-2/svg/025-delivery truck.svg" alt="">
-              </div>
-              <div class="col-70p-desktop col-100p-mobile project-describe">
-                <h2>DONG LAM CEMENT JOINT STOCK COMPANY</h2>
-                <div class="heading-line"></div>
-                <h3><span><img src="assets/imgs-dark/icon-color/maps-and-flags.svg" alt=""></span> Hue city</h3>
-                <ul>
-                  <li>Vehicle weighing and warhouse management system</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!------- SIMEXCO ----->
-          <div class="row add-outline-1 add-border  color-8 card-effect-1">
-            <div>
-              <div class="col-30p-desktop col-100p-mobile tablet">
-                <img src="assets/icon/commerce-2/svg/024-package.svg" alt="" class="project-icon">
-              </div>
-              <div class="col-70p-desktop col-100p-mobile project-describe">
-                <h2>SIMEXCO DAKLAK LTD. - ERP Project
-                </h2>
-                <div class="heading-line"></div>
-                <h3><span><img src="assets/imgs-dark/icon-color/maps-and-flags.svg" alt=""></span>  Buon Ma Thuot City, Dak Lak Province</h3>
-                <ul>
-                  <li>Purchase & Sell Management System</li>
-                  <li>Warehouse Management System</li>
-                </ul>
+        <div class="content-area">
+          <section class="text">
+            <h1>Projects</h1>
+            <div class="heading-line mobile"></div>
+            <h3 class="project-text">Projects not only got me work experiences, but also life experiences</h3>
+          </section>
+          <!-- DETAIL  -->
+          <!-- <section class="text">
+            <h1>Experiences</h1>
+            <div class="heading-line"></div>
+            <h3>My experiences which I reached thorough work on accounting software and ERP during nearly 2 years.</h3>
+          </section> -->
+  
+          <!-- DETAIL EXPERIENCE  -->
+          <section class="text">
+            <!-------- Dong Lam ------->
+            <div class="row add-outline-1 color-8 card-effect-1">
+              <div>
+                <div class="col-30p-desktop col-100p-mobile tablet">
+                  <img src="assets/icon/ecommerce/svg/033-statistics.svg" alt="">
+                </div>
+                <div class="col-70p-desktop col-100p-mobile project-describe">
+                  <h2>DONG LAM CEMENT JOINT STOCK COMPANY</h2>
+                  <div class="heading-line"></div>
+                  <h3><span><img src="assets/imgs-dark/icon-color/maps-and-flags.svg" alt=""></span> Hue city</h3>
+                  <ul>
+                    <li>Vehicle weighing and warhouse management system.</li>
+                  </ul>
+                </div>
               </div>
             </div>
-          </div>
-          <!------- VITRACO ------>
-          <div class="row add-outline-1 add-border  color-8 card-effect-1">
-            <div>
-              <div class="col-30p-desktop col-100p-mobile tablet">
-                <img src="assets/icon/commerce-2/svg/024-package.svg" alt="" class="project-icon">
-              </div>
-              <div class="col-70p-desktop col-100p-mobile project-describe">
-                <h2>VITRACO TOURISM & TRANSPORTATION CONNECTION CO.,LTD - ERP Project
-                </h2>
-                <div class="heading-line"></div>
-                <h3><span><img src="assets/imgs-dark/icon-color/maps-and-flags.svg" alt=""></span>  Da Nang City</h3>
-                <ul>
-                  <li>Booking tour management system</li>
-                  <li>Vehicle operation management system</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-
-          <!-- VIETHUONG  -->
-          <div class="row add-outline-1 add-border  color-8 card-effect-1">
-            <div>
-              <div class="col-30p-desktop col-100p-mobile tablet">
-                <img src="assets/imgs-dark/icon-color/box.svg" alt="" class="project-icon">
-              </div>
-              <div class="col-70p-desktop col-100p-mobile project-describe">
-                <h2>VIET HUONG CERAMIC CONSTRUCTION COMPANY LIMITED - Accounting Software
-                </h2>
-                <div class="heading-line"></div>
-                <h3><span><img src="assets/imgs-dark/icon-color/maps-and-flags.svg" alt=""></span> Da Nang City</h3>
-                <ul>
-                  <li>Deploy Accounting Software</li>
-                  <li>Customize management report</li>
-                </ul>
+            <!------- SIMEXCO ----->
+            <div class="row add-outline-1  color-8 card-effect-1">
+              <div>
+                <div class="col-30p-desktop col-100p-mobile tablet">
+                  <img src="assets/icon/ecommerce/svg/033-statistics.svg" alt="" class="project-icon">
+                </div>
+                <div class="col-70p-desktop col-100p-mobile project-describe">
+                  <h2>SIMEXCO DAKLAK LTD. - ERP Project
+                  </h2>
+                  <div class="heading-line"></div>
+                  <h3><span><img src="assets/imgs-dark/icon-color/maps-and-flags.svg" alt=""></span>  Buon Ma Thuot City, Dak Lak Province</h3>
+                  <ul>
+                    <li>Purchase & Sell Management System.</li>
+                    <li>Warehouse Management System.</li>
+                  </ul>
+                </div>
               </div>
             </div>
-          </div>
-          <!-- DANA TRUNG HIEU -->
-          <!-- <div class="row add-outline-1 add-border  color-8 card-effect-1">
-            <div>
-              <div class="col-30p-desktop col-100p-mobile tablet">
-                <img src="assets/imgs-dark/icon-color/truck.svg" alt="" class="project-icon">
-              </div>
-              <div class="col-70p-desktop col-100p-mobile project-describe">
-                <h2>DANA TRUNG HIEU</h2>
-                <div class="heading-line"></div>
-                <h3><span><img src="assets/imgs-dark/icon-color/maps-and-flags.svg" alt=""></span> Da Nang City</h3>
-                <ul>
-                  <li>Deploy Accounting Software</li>
-                  <li>Customize management report</li>
-                </ul>
+            <!------- VITRACO ------>
+            <div class="row add-outline-1  color-8 card-effect-1">
+              <div>
+                <div class="col-30p-desktop col-100p-mobile tablet">
+                  <img src="assets/icon/ecommerce/svg/033-statistics.svg" alt="" class="project-icon">
+                </div>
+                <div class="col-70p-desktop col-100p-mobile project-describe">
+                  <h2>VITRACO TOURISM & TRANSPORTATION CONNECTION CO.,LTD - ERP Project
+                  </h2>
+                  <div class="heading-line"></div>
+                  <h3><span><img src="assets/imgs-dark/icon-color/maps-and-flags.svg" alt=""></span>  Da Nang City</h3>
+                  <ul>
+                    <li>Booking tour management system.</li>
+                    <li>Vehicle operation management system.</li>
+                  </ul>
+                </div>
               </div>
             </div>
-          </div> -->
-          <!-- NEXT -->
-          <div class="row add-outline-1 add-border  color-8 card-effect-1">
-            <div>
-              <div class="col-30p-desktop col-100p-mobile">
-                <img src="assets/imgs-dark/icon-contact-color/identification-card-with-picture-light.svg" alt="" class="project-icon">
+  
+            <!-- VIETHUONG  -->
+            <div class="row add-outline-1 color-8 card-effect-1">
+              <div>
+                <div class="col-30p-desktop col-100p-mobile tablet">
+                  <img src="assets/icon/ecommerce/svg/033-statistics.svg" alt="" class="project-icon">
+                </div>
+                <div class="col-70p-desktop col-100p-mobile project-describe">
+                  <h2>VIET HUONG CERAMIC CONSTRUCTION COMPANY LIMITED - Accounting Software
+                  </h2>
+                  <div class="heading-line"></div>
+                  <h3><span><img src="assets/imgs-dark/icon-color/maps-and-flags.svg" alt=""></span> Da Nang City</h3>
+                  <ul>
+                    <li>Deploy Accounting Software.</li>
+                    <li>Customize management report.</li>
+                  </ul>
+                </div>
               </div>
-              <div class="col-70p-desktop col-100p-mobile"><h3>....</h3></div>
             </div>
-          </div>
-        </section>
-
-
-        <section class="text">
-          <h1>Working tree</h1>
-          <div class="heading-line"></div>
-          <h3>I've got a lot of experiences when work with BA position, not only experiences about working process but also the life experiences.</h3>
-          <h3>When working with a team to make a valuable product for client and comply it into the client's business, It's the difficult and complicated process with a lot of things need to do. But it fun and after project - is suspended or actived status - I've learned a huge of knowledge about the field which I was been built solution.</h3>
-        </section>
-
-
-        <!-- Timeline  -->
-
-        <section class="timeline">
-          <ul>
-            <li><div class="time-flow"><h3>Present</h3></div></li>
-            <li class="period">
-              <div class="noi-dung">
-                <h1>Sister Kitchen lab</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, iusto distinctio ad maiores dignissimos dolores ut provident tempora hic itaque veniam necessitatibus alias molestiae sed, officia cumque commodi, repellendus nemo.</p>
+            <!-- NEXT -->
+            <!-- <div class="row add-outline-1 color-8 card-effect-1">
+              <div>
+                <div class="col-30p-desktop col-100p-mobile">
+                  <img src="assets/imgs-dark/icon-contact-color/identification-card-with-picture-light.svg" alt="" class="project-icon">
+                </div>
+                <div class="col-70p-desktop col-100p-mobile"><h3>....</h3></div>
               </div>
-              <div class="thoi-gian">10-2019</div>
-            </li>
-            <li><div class="time-flow"><h3>2019</h3></div></li>
-            <li class="period">
-              <div class="noi-dung">
-                <h1>Yodypoo</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quis id adipisci consectetur, odio aliquam rerum molestias voluptas non tempore pariatur laboriosam, excepturi veritatis sit? Cupiditate voluptate officia itaque quae.</p>
-              </div>
-              <div class="thoi-gian">7-2019</div>
-            </li>
-            <li><div class="time-flow"><h3>2018</h3></div></li>
-            <li class="period">
-              <div class="noi-dung">
-                <h1>Diff</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus nesciunt dignissimos asperiores quisquam iste a. Fuga voluptatibus, reiciendis ullam labore consequuntur rem asperiores laboriosam doloremque ab eius, inventore at maxime?</p>
-              </div>
-              <div class="thoi-gian">5-2019</div>
-            </li>
-            <li><div class="time-flow"><h3>2017</h3></div></li>
-          </ul>
-        </section>
-
+            </div>
+          </section> -->
+  
+  
+          <section class="text">
+            <h1>Working tree</h1>
+            <div class="heading-line mobile"></div>
+            <h3>I've got a lot of experiences when work with BA position, not only experiences about working process but also the life experiences.</h3>
+            <h3>When working with a team to make a valuable product for client and comply it into the client's business, It's the difficult and complicated process with a lot of things need to do. But it fun and after project - is suspended or actived status - I've learned a huge of knowledge about the field which I was been built solution.</h3>
+          </section>
+  
+  
+          <!-- Timeline  -->
+  
+          <section class="timeline">
+            <ul>
+              <li><div class="time-flow"><h3>Present</h3></div></li>
+              <li class="period">
+                <div class="noi-dung">
+                  <h1>Sister Kitchen lab</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, iusto distinctio ad maiores dignissimos dolores ut provident tempora hic itaque veniam necessitatibus alias molestiae sed, officia cumque commodi, repellendus nemo.</p>
+                </div>
+                <div class="thoi-gian">10-2019</div>
+              </li>
+              <li><div class="time-flow"><h3>2019</h3></div></li>
+              <li class="period">
+                <div class="noi-dung">
+                  <h1>Yodypoo</h1>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus quis id adipisci consectetur, odio aliquam rerum molestias voluptas non tempore pariatur laboriosam, excepturi veritatis sit? Cupiditate voluptate officia itaque quae.</p>
+                </div>
+                <div class="thoi-gian">7-2019</div>
+              </li>
+              <li><div class="time-flow"><h3>2018</h3></div></li>
+              <li class="period">
+                <div class="noi-dung">
+                  <h1>Diff</h1>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus nesciunt dignissimos asperiores quisquam iste a. Fuga voluptatibus, reiciendis ullam labore consequuntur rem asperiores laboriosam doloremque ab eius, inventore at maxime?</p>
+                </div>
+                <div class="thoi-gian">5-2019</div>
+              </li>
+              <li><div class="time-flow"><h3>2017</h3></div></li>
+            </ul>
+          </section>
+  
+        </div>
+       
 
 
 
