--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <img src="assets/imgs-dark/icon/home-light.svg" alt="" class="nav-icon">
                     <img src="assets/imgs-dark/icon/home-dark.svg" alt="" class="nav-icon mobile-icon-hover">
                   Hello</li></a>
-                  <a href="./project.html" target="self">
+                  <a href="project.html" target="self">
                   <li><img src="assets/imgs-dark/icon/project-light.svg" alt="" class="nav-icon">
                   <img src="assets/imgs-dark/icon/project-dark.svg" alt="" class="nav-icon mobile-icon-hover">Projects</li></a>
                   <a href="./achievement.html" target="self">
