--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <nav>
             <ul>
               <li><a href="./index.html" id="" class="button five" target="_self">Home</a></li>
-              <li><a href="./project.html" id="" class="button five" target="_self">Projects</a></li>
+              <li><a href="project.html" id="" class="button five" target="_self">Projects</a></li>
               <li><a href="./achievement.html" id="" class="button five" target="_self">Achievements</a></li>
               <li><a href="./contact.html" id="" class="button five" target="_self">Contact</a></li>
             </ul>
