add new sub file

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <img src="assets/imgs-dark/icon/home-light.svg" alt="" class="nav-icon">
                     <img src="assets/imgs-dark/icon/home-dark.svg" alt="" class="nav-icon mobile-icon-hover">
                   Hello</li></a>
-                  <a href="project.html" target="self">
+                  <a href="./project.html" target="self">
                   <li><img src="assets/imgs-dark/icon/project-light.svg" alt="" class="nav-icon">
                   <img src="assets/imgs-dark/icon/project-dark.svg" alt="" class="nav-icon mobile-icon-hover">Projects</li></a>
                   <a href="./achievement.html" target="self">
@@ -70,7 +70,7 @@
           <nav>
             <ul>
               <li><a href="./index.html" id="" class="button five" target="_self">Home</a></li>
-              <li><a href="project.html" id="" class="button five" target="_self">Projects</a></li>
+              <li><a href="./project.html" id="" class="button five" target="_self">Projects</a></li>
               <li><a href="./achievement.html" id="" class="button five" target="_self">Achievements</a></li>
               <li><a href="./contact.html" id="" class="button five" target="_self">Contact</a></li>
             </ul>
