--- a/achievement.html
+++ b/achievement.html
@@ -84,10 +84,63 @@
       <div id="container">
         <div style="width:100%; height:50px"></div>
         <div class="content-area">
-
+          <!--------- Coursera Course ------->
           <section class="text">
             <h1>Google UX design</h1>
             <h3>Coursera</h3>
+            <!-- Course 1  -->
+            <div class="row add-outline-1 color-8 card-effect-1">
+              <div>
+                <div class="col-20p-desktop col-100p-mobile tablet">
+                  <img src="assets/project-imgs/achievement/Google__G__Logo.svg" alt="" class="project-icon" style="margin-top:30%;">
+                </div>
+                <div class="col-80p-desktop col-100p-mobile project-describe">
+                  <h2><a href="https://www.coursera.org/learn/foundations-user-experience-design" target="_blank">Foundations of User Experience (UX) Design</a></h2>
+                  <h4 style="text-align:left;">Completed on June 6, 2021</h4>
+                  <div class="heading-line"></div>
+                  <div class="status complete"><h4>Completed</h4></div>
+                  <div class="certificate">
+                    <a href="https://coursera.org/share/a08a55b6196aa15e2f3576c1655d7c7e" target="_blank"> <span><img src="assets/imgs-dark/icon-color/badge (1).svg" alt=""></span>&nbsp;&nbsp;View certificate</a>
+                     
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Course 2 -->
+            <div class="row add-outline-1 color-8 card-effect-1">
+              <div>
+                <div class="col-20p-desktop col-100p-mobile tablet">
+                  <img src="assets/project-imgs/achievement/Google__G__Logo.svg" alt="" class="project-icon" style="margin-top:10%;">
+                </div>
+                <div class="col-80p-desktop col-100p-mobile project-describe">
+                  <h2><a href="https://www.coursera.org/learn/foundations-user-experience-design" target="_blank">Start the UX Design Process: Empathize, Define, and Ideate</a></h2>
+                  <!-- <h4 style="text-align:left;">Completed on June 6, 2021</h4> -->
+                  <div class="heading-line"></div>
+                  <div class="status doing"><h4>Doing</h4></div>
+                  <!-- <div class="certificate">
+                      <span><img src="assets/imgs-dark/icon-color/badge (1).svg" alt=""></span>&nbsp;&nbsp;View certificate
+                  </div> -->
+                </div>
+              </div>
+            </div>
+            <!-- Course 3  -->
+            <div class="row add-outline-1 color-8 card-effect-1">
+              <div>
+                <div class="col-20p-desktop col-100p-mobile tablet">
+                  <img src="assets/project-imgs/achievement/Google__G__Logo.svg" alt="" class="project-icon" style="margin-top:10%;">
+                </div>
+                <div class="col-80p-desktop col-100p-mobile project-describe">
+                  <h2><a href="https://www.coursera.org/learn/foundations-user-experience-design" target="_blank">Build Wireframes and Low-Fidelity Prototypes
+                  </a></h2>
+                  <!-- <h4 style="text-align:left;">Completed on June 6, 2021</h4> -->
+                  <div class="heading-line"></div>
+                  <div class="status suspended"><h4>Suspended</h4></div>
+                  <!-- <div class="certificate">
+                      <span><img src="assets/imgs-dark/icon-color/badge (1).svg" alt=""></span>&nbsp;&nbsp;View certificate
+                  </div> -->
+                </div>
+              </div>
+            </div>
           </section>
           <section class="text">
             <h1>Frontend Development course</h1>
