--- a/resume.html
+++ b/resume.html
@@ -80,21 +80,24 @@
         </a>
       </header>
       <div id="container">
-        <div style="width:100%; height:50px"></div>
-        <a href="assets/pdf/thangnh_res.pdf" download="NGUYEN-HUU-THANG_resume">
-          <div class="resume-page-btn">
-            <h3>REsume</h3>
+        <div class="content-area">
+          <div style="width:100%; height:50px"></div>
+          <section class="text">
+            <div>
+              <div></div>
+              <div></div>
+            </div>
+            <div class="Heading-line"></div>
+           </section>
           </div>
-        </a>
-       <section class="text">
-        <div>
-          <div></div>
-          <div></div>
+          
+          <a href="assets/pdf/thangnh_res.pdf" download="NGUYEN-HUU-THANG_resume">
+            <div class="resume-page-btn">
+              <h3>Download</h3>
+            </div>
+          </a>
         </div>
-        <div class="Heading-line"></div>
-       </section>
-      </div>
-
+       
       <footer><div class="footer-area">
         <p>Made with <i class="em em-hearts" aria-role="presentation" aria-label="BLACK HEART SUIT"></i>  by Huu Thang</p>
     </div></footer>
