--- a/project.html
+++ b/project.html
@@ -181,16 +181,16 @@
           </section> -->
   
   
-          <section class="text">
+  
+          <!-- Timeline  -->
+  
+          <!-- <section class="text">
             <h1>Working tree</h1>
             <div class="heading-line mobile"></div>
             <h3>I've got a lot of experiences when work with BA position, not only experiences about working process but also the life experiences.</h3>
             <h3>When working with a team to make a valuable product for client and comply it into the client's business, It's the difficult and complicated process with a lot of things need to do. But it fun and after project - is suspended or actived status - I've learned a huge of knowledge about the field which I was been built solution.</h3>
           </section>
-  
-  
-          <!-- Timeline  -->
-  
+
           <section class="timeline">
             <ul>
               <li><div class="time-flow"><h3>Present</h3></div></li>
@@ -219,7 +219,7 @@
               </li>
               <li><div class="time-flow"><h3>2017</h3></div></li>
             </ul>
-          </section>
+          </section> -->
   
         </div>
        
